--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
