--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "googleapis": "^109.0.1",
     "http-errors": "^2.0.0",
     "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3",
+    "sharp": "^0.31.2",
     "slug": "^8.0.0",
     "socket.io": "^4.5.2"
   }
